Asterisk-Java 0.3-m2
	* Added getManagerConnection() to AsteriskServer (AJ-41)
	* Added timestamp property to ManagerEvent (AJ-35)

Asterisk-Java 0.3-m1
	* Changed package name from net.sf.asterisk to org.asteriskjava
	  and renamed AGI classes to Agi to conform to Java coding
	  standards
	* Renamed ManagerEventHandler and ManagerResponseHandler to 
	  ManagerEventListener and SendActionCallback.
	* Introduced generics and leveraged other Java5 features like
	  java.util.concurrent.
	* Added SSL support for the Manager API.
	* ManagerReader threads are now daemon threads so as soon as
	  all other threads are terminated the JVM will quit
	* Changed log level for message about ManagerReader termination
	  from INFO to DEBUG
	* ManagerConnectionFactory has been simplified. Usage example:
	  new ManagerConnectionFactory("host", "user", "pass")
	    .createManagerConnection();
	* Fixed timing bug in ResourceBundleMappingStrategy (AJ-25)
	* Fixed interrupt in DefaultManagerConnection (AJ-27)
	* Fixed accountCode always being null in AgiRequest
	* Fixed synchronization bug when generating internal action ids for
	  the Manager API
	* Fixed synchronous sendAction for responses that are received really
	  fast, i.e. before the thread is put asleep.
	* Fixed ConnectEvent being only fired after a successful 
	  login (AJ-32)
	* Fixed no setter for the dnd field when sending
	  ZapShowChannelsAction (AJ-33)
	* Added support for login with eventMask (AJ-28)
	* Added support for using non-shared instances AgiScript, i.e. a
	  new instance is used for each request if you set the
	  shareInstances property on your MappingStrategy to false.
	  Default is still to use shared instances (AJ-29)
	* Live objects now fire PropertyChangeEvents
	* Added extraContext, extraExten, extraPriority properties to
	  RedirectAction to support BRIstuffed versions of Asterisk (AJ-34)
	* Added recordFile and controlStreamFile methods to AgiChannel and
	  BaseAgiScript